Add delete, update methods and mappers